<resources>
    <string name="app_name">KiiSkin</string>
    <string name="keep_track_of_your_moles">Keep Track of Your moles</string>
    <string name="start">Start</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="welcome_to_kiiskin">Welcome to KiiSkin</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_kiiskin">Join KiiSkin</string>
    <string name="create">Create</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="settings">Settings</string>
    <string name="share_kiiskin_with_others">Share KiiSkin With Others</string>
    <string name="hello">Hello!</string>
    <string name="recycler_view_demo">Recycler View Demo</string>
    <string name="title">Title</string>
    <string name="create_account">Create Account</string>
    <string name="save">save</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email">email</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="new_to_kiiskin">New to KiiSkin? Create An Account</string>
    <string name="Log_in">Log In</string>
    <string name="Skip">Skip</string>
    <string name="tour_start">Tour, Start</string>
    <string name="look_at_your_body_and_take_mole_pictures">Look at your body and take mole pictures.</string>
    <string name="username">Username</string>
    <string name="tab_1">Tab 1</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
