<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/home_11"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="204dp"
            android:layout_gravity="center_horizontal"
            android:text="         "
            android:textColor="#673AB7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Welcome To Kiiskin"
            android:textColor="#673AB7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:text="         "
            android:textColor="#673AB7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/keep_track_of_your_moles"
            android:textColor="#673AB7"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:text="         "
            android:textColor="#673AB7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/UserMessage"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/enter_your_name" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_gravity="center_horizontal"
            android:text="         "
            android:textColor="#673AB7"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/MainRegButton"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="registration" />

            <Button
                android:id="@+id/MainSignInButton"
                android:layout_width="193dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Sign In" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/main_registration"
        android:visibility="gone"
        layout="@layout/activity_signup"/>

    <include
        android:id="@+id/main_signin"
        android:visibility="gone"
        layout="@layout/activity_signin"
        />

</androidx.constraintlayout.widget.ConstraintLayout>