<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<!--    tools:context=".FragmentOne"-->


    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:id="@+id/image_view"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="404dp"
        android:layout_height="590dp"
        android:layout_weight="1"
        android:contentDescription="description_info"
        android:src="@drawable/launcher_icon" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_capture"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Camera" />

        <Button
            android:id="@+id/buttonGallery"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Gallery" />

    </LinearLayout>



</LinearLayout>