<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/StartSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Start Journey"
        android:textAlignment="center"
        android:layout_gravity="end"
        android:textColor="#673AB7"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="286dp"
        android:layout_height="182dp"
        android:layout_marginTop="18dp"
        android:paddingRight="60dp"
        android:text="        "
        android:textColor="#020005" />

    <TextView
        android:id="@+id/tourstart"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="18dp"
        android:paddingRight="60dp"
        android:text="@string/tour_start"
        android:textColor="#020005" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:text="@string/welcome_to_kiiskin"
        android:textColor="#020005" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/look_at_your_body_and_take_mole_pictures"
        android:textColor="#020005" />


</LinearLayout>